[package]
name = "wmd"
version = "0.1.0"
edition = "2018"
description = "Window manager daemon."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/malwrar/wmd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
